# MP3_work

./: .gitignore  CMakeLists.txt
consumer/: main.cpp
mp3_id3/: GetFrame.h  GetHeader.h  ID3v2Frame.h  ID3v2Header.h  Mp3Worker.h  ParseMP3.h  libMP3.h  libMP3ID3v2Frame.h  libMP3ID3v2Header.h  libMP3Worker.h
mp3_id3/src/: GetFrame.cpp  GetHeader.cpp  GetHeading.cpp  ID3v2Frame.cpp  ID3v2Header.cpp  Mp3Worker.cpp  ParseMP3.cpp
